--- a/UnittestsAnimalshelter/UnittestsAnimalshelter.csproj
+++ b/UnittestsAnimalshelter/UnittestsAnimalshelter.csproj
@@ -50,7 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnittesttAS.cs" />
+    <Compile Include="UnittestAS.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
