--- a/Animal Shelter/Animal Shelter.csproj
+++ b/Animal Shelter/Animal Shelter.csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +57,7 @@
     <Compile Include="Animal.cs" />
     <Compile Include="Cat.cs" />
     <Compile Include="IPriceable.cs" />
+    <Compile Include="NotReadException.cs" />
     <Compile Include="SimpleDate.cs" />
     <Compile Include="Dog.cs" />
     <Compile Include="Program.cs" />
